# webserver-rs

./: .env  .gitignore  Cargo.toml  README.md  config.toml
.cargo/: config.toml
cert/: cert.pem  key.pem
examples/: config.toml  hello.rs
src/: lib.rs  main.rs  route.rs  web_core.rs
src/route/: hello.rs
src/web_core/: assets.rs  authorization.rs  config.rs  db.rs  db_pool.rs  error_catch.rs  http_error.rs  log.rs
