[package]
name = "webserver-rs"
version = "0.5.1"
edition = "2021"
description = "An out-of-the-box web server framework that is encapsulated based on salvo and sea-orm."
license = "MIT"
repository = "https://github.com/xmh0511/webserver-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
salvo = { version = "0.67.0", features = ["jwt-auth","serve-static","cors"] }
tokio = { version = "1", features = ["macros"] }
config-file = "0.2.3"
serde = "1.0.163"
tracing-subscriber = { version = "0.3.17", features = [
	"env-filter",
	"time",
	"local-time",
] }
tracing-appender = "0.2.2"
tracing = "0.1.37"
time = { version = "0.3.21", features = ["macros"] }
chrono = "0.4.26"
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "macros","debug-print"] }
openssl = { version = "0.10.64", features = ["vendored"] }
anyhow = "1.0.71"
serde_json = "1.0.96"
jsonwebtoken = "9.3.0"
futures = "0.3.30"

[features]
mysql = ["sea-orm/sqlx-mysql"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
http3 = ["salvo/quinn"]
